[workspace]
members = [
    "rust-in-action/ch3-file-api",
    "rust-in-action/ch4-cubesat",
    "rust-in-action/ch4-wrap-with-rc",
    "rust-in-action/ch2-grep-lite",
    "rust-in-action/ch2-mandelbrot",
    "rust-in-action/ch5-f32-as-u32", "rust-in-action/ch5-u16-overflow", "rust-in-action/ch5-endianness", "rust-in-action/ch5-decode-f32", "rust-in-action/ch5-fixed-point-number",
]
resolver = "2"
